--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js"
   },
   "author": "Quentin boussard",
@@ -17,5 +16,8 @@
     "is-image": "^2.0.0",
     "list-contents": "^4.0.2",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
